# TinyWorld

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  Tupfile  build.fox  proto.rb  proto3.rb  test.rb
app/: CMakeLists.txt
app-ios/: GameViewController.mm
app-ios.xcodeproj/: project.pbxproj
app/inc/: Application.h  Application.hpp  Component.h  Component.hpp  Debug.h  Debug.hpp  EntityManager.h  EntityManager.hpp  Game.h  Game.hpp  System.h  System.hpp  main.hpp
app/inc/components/: Life.h  Life.hpp  Position.h  Position.hpp  Visibility.h  Visibility.hpp
app/inc/ecs/: Component.hpp  EntityManager.hpp  System.hpp
app/inc/helpers/: Mapper.hpp
app/inc/systems/: System_1.h  System_1.hpp  System_2.h  System_2.hpp
app/res/: cacodemon.mtl  flan.mtl  goomba.mtl
app/res/shaders/: debuging.fs  debuging.vs  deferred_shading.fs  filling.vs  fragment_shader.frag  geometry_buffer.vs  rendering.fs  rendering.vs  shadow_volume.vs  shadowing.fs  shadowing.vs  vertex_shader.vert
app/src/: Application.cpp  Application.h  Application.hpp  Debug.cpp  EntityManager.cpp  Game.cpp  Game.hpp  System.cpp  main.cpp  main.h  main.hpp
app/src/components/: Life.hpp  Movement.hpp  Physics.hpp  Position.hpp  Visibility.hpp
app/src/ecs/: Component.cpp  Component.hpp  ComponentGUI.cpp  ComponentGUI.hpp  ComponentManager.cpp  ComponentManager.hpp  ComponentManagerBase.cpp  ComponentManagerBase.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Id.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp  SystemStatistics.cpp  SystemStatistics.hpp
app/src/graphic/: DirectionalLight.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  MeshStore.cpp  MeshStore.hpp  MeshType.hpp  Normal.hpp  Shape.cpp  Shape.hpp  Triangle.hpp  Vertex.hpp
app/src/helpers/: Debug.cpp  Debug.hpp  Mapper.cpp
app/src/math/: Vertex.hpp
app/src/systems/: MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  System_1.cpp  System_1.hpp
app/src/utils/: Aggregator.hpp  FPS.cpp  FPS.hpp  Log.cpp  Log.hpp  MTL.cpp  MTL.hpp  MTLLoader.cpp  MTLLoader.hpp  MTLParser.cpp  MTLParser.hpp  OBJ.cpp  OBJ.hpp  OBJLoader.cpp  OBJLoader.hpp  OBJParser.cpp  OBJParser.hpp  PNG.cpp  PNG.hpp  Program.cpp  Random.cpp  Shader.cpp  Signal.cpp  Signal.hpp
cmake/: CMakeLists.txt
lib/: CMakeLists.txt
lib-core.xcodeproj/: project.pbxproj
lib/ext/glad/include/glad/: glad.h
lib/ext/glad/src/: glad.c
lib/inc/: Application.hpp  ApplicationParams.hpp  GLM.hpp  OpenGL.hpp
lib/inc/components/: Visibility.hpp
lib/inc/ecs/: ComponentManager.hpp  ComponentManagerBase.hpp  EntityManager.hpp  Id.hpp  System.hpp  SystemManager.hpp  SystemStatistics.hpp
lib/inc/graphic/: Cubemap.hpp  CubemapStore.hpp  CubemapType.hpp  DirectionalLight.hpp  GBuffer.hpp  MeshType.hpp  Program.hpp  ProgramStore.hpp  ProgramType.hpp  Quad.hpp  Renderer.hpp
lib/inc/systems/: MovementSystem.hpp  RenderSystem.hpp
lib/inc/utils/: FrameBuffer.hpp  Program.hpp  Property.hpp  PropertyList.hpp  PropertyName.hpp  PropertyValue.hpp  Store.hpp  Utility.hpp
lib/res/blends/: twisted-torus.blend
lib/res/materials/: cacodemon.mtl  clay_brick.mtl  fan_cobblestone.mtl  medieval_brick.mtl  old_tiles.mtl  sphere.mtl  teapot.mtl  torus.mtl  winged_victory.mtl  wooden_floor.mtl  wooden_planks.mtl  worn_metal_floor.mtl  worn_plaster.mtl
lib/res/objects/: torus.mtl  twisted-torus.mtl
lib/res/shaders/: deferred_shading.frag  deferred_shading.vert  filling.frag  filling.vert  geometry_buffer.frag  geometry_buffer.vert  shadow_imprint.frag  shadow_imprint.vert  shadow_volume.frag  shadow_volume.geom  shadow_volume.vert
lib/res/textures/surfaces/worn_metal_floor/: diffuse
lib/src/: Application.cpp  Game.cpp  Game.hpp  OpenGL.hpp
lib/src/components/: Life.hpp  Movement.hpp  Visibility.hpp
lib/src/ecs/: ComponentManager.cpp  ComponentManagerBase.cpp  ComponentManagerBase.hpp  EntityManager.cpp  System.cpp  System.hpp  SystemManager.cpp  SystemStatistics.cpp  SystemStatistics.hpp
lib/src/graphic/: Camera.cpp  Camera.hpp  Cubemap.cpp  Cubemap.hpp  CubemapParams.hpp  CubemapStore.cpp  DirectionalLight.hpp  GBuffer.cpp  GBuffer.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshParams.hpp  MeshStore.cpp  MeshStore.hpp  MeshVertexArray.cpp  MeshVertexArray.hpp  Model.cpp  Model.hpp  Program.cpp  Program.hpp  ProgramParams.hpp  ProgramStore.cpp  Quad.cpp  Quad.hpp  Renderer.cpp  Renderer.hpp  RendererParams.hpp  SBuffer.cpp  SBuffer.hpp  Shader.cpp  Shader.hpp
lib/src/shaders/: deferred_shading.frag  deferred_shading.fs  deferred_shading.vert  deferred_shading.vs  geometry_buffer.frag  geometry_buffer.fs  geometry_buffer.vert  geometry_buffer.vs  shadow_imprint.frag  shadow_volume.geom  shadow_volume.vert
lib/src/systems/: MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
lib/src/utils/: Aggregator.cpp  Aggregator.hpp  Cubemap.cpp  Cubemap.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Id.cpp  Id.hpp  Log.cpp  Log.hpp  MTL.cpp  MTL.hpp  Manifold.cpp  Manifold.hpp  OBJ.cpp  OBJ.hpp  PNG.cpp  PNG.hpp  Path.cpp  Path.hpp  Program.cpp  Program.hpp  Property.cpp  PropertyList.cpp  PropertyList.hpp  PropertyName.cpp  PropertyName.hpp  PropertyValue.cpp  PropertyValue.hpp  Random.cpp  Random.hpp  Shader.cpp  Shader.hpp  Signal.cpp  Store.cpp  Store.hpp  Texture.cpp  Texture.hpp  Utility.cpp
lib/tests/: CMakeLists.txt
lib/tests/src/: main.cpp  test_ComponentManager.cpp
lib/tests/src/ecs/: test_ComponentManager.cpp  test_EntityManager.cpp  test_System.cpp
lib/tests/src/utils/: test_Aggregator.cpp  test_Id.cpp  test_Manifold.cpp  test_Path.cpp  test_Signal.cpp  test_Store.cpp
reports/: CMakeLists.txt
scripts/: clang-tidy  cppcheck  cppcheck-htmlreport  cubemap2irrmap.sh  generate-lib-xcodeproj  tags  tga2png.sh
src/: main.cpp  (+1 more)
test/: CMakeLists.txt
test/src/: test_project1.cpp
tests/: CMakeLists.txt
tests/lib/: hamlest.hpp  lest.hpp
tests/src/: main.cpp  test_Aggregator.cpp  test_ComponentManager.cpp  test_EntityManager.cpp  test_Signal.cpp  test_System.cpp
(+5 files in other folders)
